--- a/Signup/signup.css
+++ b/Signup/signup.css
@@ -18,8 +18,8 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: white;
 }
-.btn {
+/* .btn {
   padding: 2px 1px;
   background-color: blue;
   color: white;
-}
+} */
